# URDF-Visualizer-MotionPlayer

./: README.md  package-lock.json  package.json  vite.config.ts
docs/: 1.urdf  3.urdf  4.xacro  CNAME  files.json  index.html
docs/URDF-Visualizer/: 2.urdf  index.html
docs/URDF-Visualizer/assets/: index-7d1qgEn2.js  index-CnTQzBYq.js  index-DgGfKbjS.js
docs/URDF-Visualizer/g1/urdf/: g1.urdf
docs/URDF-Visualizer/luxuryhand_urdf_0917/: package.xml  pixi.toml
docs/URDF-Visualizer/luxuryhand_urdf_0917/launch/: display.launch  gazebo.launch
docs/URDF-Visualizer/luxuryhand_urdf_0917/meshes/: 22.STL  base_link.STL
docs/URDF-Visualizer/material_library/: palette.xacro
docs/assets/: index-BVyQtQCF.js  index-DMorfWen.css  index-R1NIbr3l.js
docs/fractal_robot/: engine.xacro  main.xacro
docs/go2/urdf/: go2.urdf  go2_modified.urdf
docs/luxuryhand_urdf_0917/: CMakeLists.txt
docs/luxuryhand_urdf_0917/meshes/: 11.STL  13.STL  21.STL  23.STL  24.STL  25.STL  26.STL  32.STL  33.STL  34.STL  35.STL  41.STL  42.STL  43.STL  51.STL  52.STL  53.STL  54.STL  55.STL  J1.STL  J2.STL
docs/luxuryhand_urdf_0917/urdf/: luxuryhand_urdf_0917.urdf
docs/material_library/: components.xacro  main.xacro
docs/spider_robot/: common.xacro  leg.xacro  main.xacro
public/luxuryhand_urdf_0917/config/: joint_names_luxuryhand_urdf_0917.yaml
public/luxuryhand_urdf_0917/meshes/: 12.STL  14.STL  31.STL  44.STL
public/luxuryhand_urdf_0917/urdf/: luxuryhand_urdf_0917.csv
src/: App.tsx
src/components/: JointController.tsx  MotionPlayer.tsx
